RESOLVED FIXED67407
[GStreamer] 2 flaky media tests
https://bugs.webkit.org/show_bug.cgi?id=67407
Summary [GStreamer] 2 flaky media tests
Philippe Normand
Reported 2011-09-01 08:02:28 PDT
Since the Debug bots got GStreamer updates (0.10.35) 2 tests became flaky because of https://bugzilla.gnome.org/show_bug.cgi?id=639941 --- /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/media/video-timeupdate-reverse-play-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-debug/build/layout-test-results/media/video-timeupdate-reverse-play-actual.txt @@ -1,3 +1,4 @@ +FAIL: Timed out waiting for notifyDone to be called Tests that a 'timeupdate' event is fired when a movie plays in reverse to time zero. @@ -10,8 +11,4 @@ RUN(video.play()) RUN(video.playbackRate = -1) -EVENT(timeupdate) fired at time 0 -EXPECTED (video.ended == 'false') OK -END OF TEST - The other test is media/video-reverse-play-duration.html Meanwhile a proper fix is worked on in GStreamer I'd like to temporarily provide a workaround
Attachments
proposed patch (2.74 KB, patch)
2011-09-01 08:05 PDT, Philippe Normand
mrobinson: review+
Philippe Normand
Comment 1 2011-09-01 08:05:31 PDT
Created attachment 105966 [details] proposed patch
Philippe Normand
Comment 2 2011-09-29 01:06:40 PDT
Note You need to log in before you can comment on or make changes to this bug.