[GStreamer] 2 flaky media tests https://bugs.webkit.org/show_bug.cgi?id=67407

Reviewed by Martin Robinson.

Workaround for GStreamer bug#639941. In GStreamer
0.10.35 basesink reports wrong duration in case of EOS and
negative playback rate. This workaround fixes two media tests,
media/video-timeupdate-reverse-play.html and
media/video-reverse-play-duration.html.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::prepareToPlay):
(WebCore::MediaPlayerPrivateGStreamer::currentTime):
(WebCore::MediaPlayerPrivateGStreamer::didEnd):

Canonical link: https://commits.webkit.org/85078@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96311 268f45cc-cd09-0410-ab3c-d52691b4dbfc